--- a/prod/deployment.yaml
+++ b/prod/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: production-container
-        image: <todo>
+        image: gcr.io/your-actual-project-id/sample-app:v1.0
         ports:
         - containerPort: 8080
